remove proxy in production

--- a/angular.json
+++ b/angular.json
@@ -71,8 +71,7 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "cotador-app:build:production",
-              "proxyConfig": "proxy.conf.js"
+              "browserTarget": "cotador-app:build:production"
             }
           }
         },
