--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.0",
-    "@angular/cdk": "^11.1.0",
-    "@angular/common": "~11.1.0",
-    "@angular/compiler": "~11.1.0",
-    "@angular/core": "~11.1.0",
-    "@angular/forms": "~11.1.0",
-    "@angular/material": "^11.1.0",
-    "@angular/material-moment-adapter": "^11.2.6",
-    "@angular/platform-browser": "~11.1.0",
-    "@angular/platform-browser-dynamic": "~11.1.0",
-    "@angular/router": "~11.1.0",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.2.10",
+    "@angular/common": "^11.1.2",
+    "@angular/compiler": "^11.1.2",
+    "@angular/core": "^11.1.2",
+    "@angular/forms": "^11.1.2",
+    "@angular/material": "^11.2.10",
+    "@angular/material-moment-adapter": "^11.2.10",
+    "@angular/platform-browser": "^11.1.2",
+    "@angular/platform-browser-dynamic": "^11.1.2",
+    "@angular/router": "^11.1.2",
     "bcryptjs": "^2.4.3",
     "moment": "^2.29.1",
     "ngx-color-picker": "^11.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.0",
-    "@angular/cli": "~11.1.0",
-    "@angular/compiler-cli": "~11.1.0",
-    "@angular/localize": "^11.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1101.4",
+    "@angular/cli": "^11.2.10",
+    "@angular/compiler-cli": "^11.1.2",
+    "@angular/localize": "^11.2.11",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^12.20.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -47,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "^4.1.5"
   }
 }
